--- a/lanarsToDo/src/app/todo-list/todo-list.component.html
+++ b/lanarsToDo/src/app/todo-list/todo-list.component.html
@@ -3,11 +3,11 @@
 		<h4>Filter by:</h4>
 		<div class="form-group">
 			<label for="titleFilter"> Title</label>
-			<input type="text" class="form-control" id="titleFilter" name="titleFilter" placeholder="Title" [(ngModel)]="filterString" (ngModelChange)="getPages()">
+			<input type="text" class="form-control" id="titleFilter" name="titleFilter" placeholder="Title" [(ngModel)]="filterString">
 		</div>
 		<div class="form-group">
 			<label for="dateFilter">Date</label>
-			<select class="form-control" id="dateFilter" type="text" name="dateFilter" [(ngModel)]="filterDate" (ngModelChange)="getPages()">
+			<select class="form-control" id="dateFilter" type="text" name="dateFilter" [(ngModel)]="filterDate">
     		<option value=""></option>
 			<option *ngFor="let item of todoList" value="{{item.created_at}}">{{item.created_at}}</option>
 		</select>
@@ -16,6 +16,7 @@
 	<div class="col-xs-12 col-md-10 todo-list_wrapper">
 		<div class="row">
 			<div class="col-xs-6 col-md-4 col-lg-3 todo-item" *ngFor="let todo of todoList | filter : 'title' : filterString | filter : 'created_at' : filterDate | pager: page : itemInPage">
+
 				<a (click)=delete(todo) class="delBtn"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
 				<h3>{{todo.title}}</h3>
 				<div>{{todo.description}}</div>
