--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,11 +3,11 @@
 		<h4>Filter by:</h4>
 		<div class="form-group">
 			<label for="titleFilter"> Title</label>
-			<input type="text" class="form-control" id="titleFilter" name="titleFilter" placeholder="Title" [(ngModel)]="filterString">
+			<input type="text" class="form-control" id="titleFilter" name="titleFilter" placeholder="Title" [(ngModel)]="filterString" (ngModelChange)="getPages()">
 		</div>
 		<div class="form-group">
 			<label for="dateFilter">Date</label>
-			<select class="form-control" id="dateFilter" type="text" name="dateFilter" [(ngModel)]="filterDate">
+			<select class="form-control" id="dateFilter" type="text" name="dateFilter" [(ngModel)]="filterDate" (ngModelChange)="getPages()">
     		<option value=""></option>
 			<option *ngFor="let item of todoList" value="{{item.created_at}}">{{item.created_at}}</option>
 		</select>
